Use OpenSeadragon as an image viewer. Fix up the styling of the artwork properties. Make sure the layout works well on mobile.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,3 +131,16 @@
 .facet .extra-facets {
     display: none;
 }
+
+/*
+ * Styling for the OpenSeadragon viewer
+ */
+#openseadragon-toolbar {
+    height: 33px;
+    width: 100%;
+}
+
+#openseadragon-viewer {
+    height: 400px;
+    width: 100%;
+}
